<?xml version="1.0"?>
<package format="2">
  <name>hector_gazebo_worlds</name>
  <version>0.3.8</version>
  <description>hector_gazebo_worlds provides gazebo scenarios used by Team Hector Darmstadt</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_gazebo_worlds</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
